fix: remove overflow hidden from .l-main in page-seminar

--- a/assets/css/page/page-seminar.css
+++ b/assets/css/page/page-seminar.css
@@ -171,7 +171,7 @@ svg {
 /* mainレイアウト
 ***************************************************************/
 .l-main {
-  overflow: hidden;
+  overflow: visible;
   width: 100%;
   margin-top: 7.2rem;
 }
